--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,166 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+:root {
+    --gray: #EEEFF0;
+    --light-brown: #CABABA;
+    --green: #769990;
+    --dark-brown: #625F5F;
+    --red: #DC3026;
+    --light-red: #D4665E;
+    --icon: #ee786b;
+    --black: #302C2B;
+    --off-white: #f8fafc;
+    --option-background: #ffeeea;
+    --option-background-hover: #fbf5f3;
+    --text-gray: #b8bfc7;
+}
+
+body {
+    background-color: var(--off-white);
+    color: var(--black);
+    font-size: 0.8rem;
+}
+
+.container .header {
+    height: 4rem;
+    width: 100vw;
+    background-color: #ffff;
+    padding: 10px 0;
+    display: flex;
+    align-items: center;
+    box-shadow: 0px 16px 32px 0px rgba(233, 238, 242, 0.4);
+}
+
+.container .header .logo-wrapper {
+    display: flex;
+    height: 2rem;
+    flex: 2;
+    justify-content: center;
+    align-items: center;
+    column-gap: 1rem;
+    font-size: 1.1rem;
+    cursor: pointer;
+}
+
+.container .header .logo-wrapper img {
+    height: 1.7rem;
+}
+
+.container .header .logo-wrapper .logo-text .bold {
+    font-weight: 800;
+}
+
+.container .header .logo-wrapper .logo-text .thin {
+    font-weight: 500;
+}
+
+.container .header .options-wrapper {
+    height: 2rem;
+    flex: 5;
+    display: flex;
+    font-weight: 500;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.header-active {
+    background-color: var(--option-background);
+    color: var(--icon);
+}
+
+.container .header .options-wrapper .option {
+    display: flex;
+    column-gap: 0.5rem;
+    justify-content: center;
+    align-items: center;
+    padding: 0 1rem;
+    height: 100%;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.container .header .options-wrapper .option:hover {
+    background-color: var(--option-background-hover);
+    color: var(--icon);
+    transition: 0.2s ease-in;
+}
+
+.container .header .options-wrapper .option i {
+    font-size: 1rem;
+    color: var(--icon);
+}
+
+.container .header .utility-wrapper {
+    height: 2rem;
+    flex: 3;
+    display: flex;
+    justify-content: center;
+    column-gap: 2rem;
+}
+
+.container .header .utility-wrapper .notification {
+    position: relative;
+    height: 2rem;
+    width: 2rem;
+    background-color: var(--off-white);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.container .header .utility-wrapper .notification .dot {
+    position: absolute;
+    top: 5px;
+    left: 1rem;
+    height: 0.5rem;
+    width: 0.5rem;
+    border-radius: 50%;
+    background-color: var(--red);
+}
+
+.container .header .utility-wrapper .company-profile {
+    display: flex;
+    column-gap: 1rem;
+    cursor: pointer;
+}
+
+.container .header .utility-wrapper .company-profile .profile-img {
+    height: 2rem;
+    width: 2rem;
+    background-color: var(--off-white);
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.container .header .utility-wrapper .company-profile .profile-img img {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+}
+
+.container .header .utility-wrapper .company-profile .name-email {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.container .header .utility-wrapper .company-profile .name-email .com-name {
+    font-size: 0.7rem;
+    font-weight: 700;
+}
+
+.container .header .utility-wrapper .company-profile .name-email .com-email {
+    font-size: 0.6rem;
+    font-weight: 500;
+    color: var(--text-gray);
+}
