--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
-
 :root {
     --gray: #EEEFF0;
     --light-brown: #CABABA;
     --green: #769990;
     --dark-brown: #625F5F;
     --red: #DC3026;
-    --light-red: #D4665E;
+    --light-red: #ee786b;
     --icon: #ee786b;
     --black: #302C2B;
     --off-white: #f8fafc;
     --option-background: #ffeeea;
     --option-background-hover: #fbf5f3;
     --text-gray: #b8bfc7;
+    --white: #ffff;
+    --text-green: #32a3bb;
+    --search-background: #f4fafc;
+    --para-color: #a3a9b1;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
@@ -28,7 +32,11 @@ body {
     font-size: 0.8rem;
 }
 
+/* Header CSS */
+
 .container .header {
+    position: fixed;
+    top: 0;
     height: 4rem;
     width: 100vw;
     background-color: #ffff;
@@ -39,9 +47,15 @@ body {
 }
 
 .container .header .logo-wrapper {
-    display: flex;
-    height: 2rem;
     flex: 2;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container .header .logo-wrapper .logo-area{
+    display: flex;
     justify-content: center;
     align-items: center;
     column-gap: 1rem;
@@ -49,7 +63,7 @@ body {
     cursor: pointer;
 }
 
-.container .header .logo-wrapper img {
+.container .header .logo-wrapper .logo-area img {
     height: 1.7rem;
 }
 
@@ -90,12 +104,14 @@ body {
     background-color: var(--option-background-hover);
     color: var(--icon);
     transition: 0.2s ease-in;
+    
 }
 
 .container .header .options-wrapper .option i {
     font-size: 1rem;
     color: var(--icon);
 }
+
 
 .container .header .utility-wrapper {
     height: 2rem;
@@ -163,4 +179,286 @@ body {
     font-size: 0.6rem;
     font-weight: 500;
     color: var(--text-gray);
+}
+
+/* Body CSS */
+
+.body-wrapper {
+    margin-top: 4rem;
+    height: auto;
+    padding: 2rem 2rem;
+}
+
+.container .body-wrapper .body-content {
+    width: auto;
+    display: flex;
+}
+
+/* Scroll bar hide ------------------------------------------------------------------*/ 
+.container .body-wrapper .body-content .left-panel::-webkit-scrollbar, .right-panel::-webkit-scrollbar, .middle-panel::-webkit-scrollbar {
+    display: none;
+}
+
+.left-panel, .right-panel, .middle-panel {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+/* --------------------------------------------------------------------------------- */
+
+.container .body-wrapper .body-content .left-panel {
+    position: fixed;
+    width: 24%;
+    left: 2rem;
+    height: 100%;
+    overflow-x: hidden;
+    z-index: 1;
+}
+
+.container .body-wrapper .body-content .left-panel .com-profile-conainer{
+    width: 100%;
+    padding: 2rem 2rem;
+    row-gap: 1.5rem;
+    background-color: var(--white);
+    border-radius: 12px;
+}
+
+.container .body-wrapper .body-content .middle-panel {
+    width: 48%;
+    margin-left: 26%;
+    height: auto;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+    
+}
+
+.container .body-wrapper .body-content .middle-panel .search-container {
+    width: 100%;
+    background-color: var(--white);
+    padding: 2rem 2rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1.1rem;
+    border-radius: 12px;
+}
+
+.container .body-wrapper .body-content .middle-panel .search-container .search-text-wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.container .body-wrapper .body-content .middle-panel .search-container .search-text-wrapper .search-text {
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.container .body-wrapper .body-content .middle-panel .search-container .search-text-wrapper .save-search {
+    font-weight: 500;
+    color: var(--text-green);
+    cursor: pointer;
+}
+
+.container .body-wrapper .body-content .middle-panel .search-container .search-bar-wrapper {
+    display: flex;
+    column-gap: 2rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.container .body-wrapper .body-content .middle-panel .search-container .search-bar-wrapper .search-bar {
+    width: 100%;
+    width: 100%;
+    padding: 0.8rem 1rem;
+    background-color: var(--off-white);
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+    border-radius: 10px;
+}
+
+.container .body-wrapper .body-content .middle-panel .search-container .search-bar-wrapper .search-bar input {
+    background: transparent;
+    outline: none;
+    border: none;
+    width: 100%;
+}
+
+.container .body-wrapper .body-content .middle-panel .search-container .search-bar-wrapper button {
+    padding: 0.7rem 1rem;
+    border: none;
+    background-color: var(--off-white);
+    border-radius: 10px;
+    color: var(--text-green);
+    font-size: 0.8rem;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.container .body-wrapper .body-content .middle-panel .search-container .search-result {
+    padding: 0.8rem 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 12px;
+    background-color: var(--search-background);
+    color: var(--text-green);
+    font-weight: 500;
+}
+
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+}
+
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate{
+    background-color: var(--white);
+    border-radius: 12px;
+    padding: 2rem 2rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+}
+
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .profile-title-wrapper {
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+    
+}
+
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .profile-title-wrapper .cand-profile-img {
+    width: fit-content;
+    display: flex;
+    align-items: center;
+}
+
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .profile-title-wrapper .cand-profile-img img {
+    height: 2.5rem;
+    width: 2.5rem;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .profile-title-wrapper .cand-name-wrapper{
+    width: fit-content;
+}
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .profile-title-wrapper .cand-name-wrapper .cand-name {
+    font-size: 0.9rem;
+    font-weight: 600;
+}
+
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .profile-title-wrapper .cand-name-wrapper .cand-grad {
+    font-size: 0.7rem;
+    color: var(--text-gray);
+}
+
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .profile-title-wrapper .button-wrapper {
+    flex: 2;
+    display: flex;
+    justify-content: end;
+}
+
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .profile-title-wrapper .button-wrapper button {
+    padding: 0.6rem 1rem;
+    border-radius: 12px;
+    background-color: var(--off-white);
+    border: none;
+    color: var(--text-green);
+    font-weight: 500;
+    font-size: 0.8rem;
+    text-align: center;
+    cursor: pointer;
+}
+
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .cand-desc {
+    font-size: 0.7rem;
+    color: var(--para-color);
+}
+
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .stack-tags {
+    display: flex;
+    column-gap: 1rem;
+}
+
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .stack-tags .tags {
+    padding: 0.5rem 0.8rem;
+    background-color: var(--off-white);
+    border-radius: 10px;
+    color: var(--text-gray);
+    font-weight: 500;
+    font-size: 0.7rem;
+}
+
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .divider {
+    width: 100%;
+    height: 2px;
+    background-color: var(--text-gray);
+    opacity: 0.5;
+    border-radius: 2px;
+}
+
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .stats-wrapper{
+    display: flex;
+    column-gap: 1rem;
+    align-items: center;
+}
+
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .stats-wrapper .bi {
+    color: var(--text-green);
+    font-size: 1rem;
+}
+
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .stats-wrapper .ref-score .score-obtained , .shortlisted-wapper .sort-com {
+    font-weight: 700;
+    font-size: 1rem;
+}
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .stats-wrapper .ref-score {
+    padding: 0.6rem 0;
+    font-size: 0.9rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 0.3rem;
+}
+
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .stats-wrapper .ref-score .total-score, .shortlisted-wapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 0.3rem;
+}
+
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .stats-wrapper .ref-score .total-score, .shortlisted-wapper .sort-text {
+    font-size: 0.7rem;
+    color: var(--para-color);
+    
+}
+
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .sortlist-btn {
+    flex: 2;
+    display: flex;
+    justify-content: end;
+}
+
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .sortlist-btn button {
+    padding: 0.8rem 2rem;
+    border: none;
+    background-color: var(--light-red);
+    color: var(--white);
+    font-size: 0.7rem;
+    border-radius: 12px;
+    letter-spacing: 0.3px;
+    cursor: pointer;
+}
+
+.container .body-wrapper .body-content .right-panel {
+    border: 1px solid black;
+    position: fixed;
+    width: 24%;
+    right: 2rem;
+    height: 100%;
+    overflow-x: hidden;
+    z-index: 1;
 }
