--- a/styles.css
+++ b/styles.css
@@ -312,7 +312,7 @@ body {
     row-gap: 1rem;
 }
 
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate{
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate{
     background-color: var(--white);
     border-radius: 12px;
     padding: 2rem 2rem;
@@ -321,46 +321,46 @@ body {
     row-gap: 1rem;
 }
 
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .profile-title-wrapper {
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .profile-title-wrapper {
     display: flex;
     align-items: center;
     column-gap: 1rem;
     
 }
 
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .profile-title-wrapper .cand-profile-img {
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .profile-title-wrapper .cand-profile-img {
     width: fit-content;
     display: flex;
     align-items: center;
 }
 
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .profile-title-wrapper .cand-profile-img img {
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .profile-title-wrapper .cand-profile-img img {
     height: 2.5rem;
     width: 2.5rem;
     border-radius: 50%;
     object-fit: cover;
 }
 
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .profile-title-wrapper .cand-name-wrapper{
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .profile-title-wrapper .cand-name-wrapper{
     width: fit-content;
 }
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .profile-title-wrapper .cand-name-wrapper .cand-name {
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .profile-title-wrapper .cand-name-wrapper .cand-name {
     font-size: 0.9rem;
     font-weight: 600;
 }
 
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .profile-title-wrapper .cand-name-wrapper .cand-grad {
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .profile-title-wrapper .cand-name-wrapper .cand-grad {
     font-size: 0.7rem;
     color: var(--text-gray);
 }
 
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .profile-title-wrapper .button-wrapper {
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .profile-title-wrapper .button-wrapper {
     flex: 2;
     display: flex;
     justify-content: end;
 }
 
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .profile-title-wrapper .button-wrapper button {
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .profile-title-wrapper .button-wrapper button {
     padding: 0.6rem 1rem;
     border-radius: 12px;
     background-color: var(--off-white);
@@ -370,19 +370,21 @@ body {
     font-size: 0.8rem;
     text-align: center;
     cursor: pointer;
+    display: flex;
+    column-gap: 0.5rem;
 }
 
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .cand-desc {
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .cand-desc {
     font-size: 0.7rem;
     color: var(--para-color);
 }
 
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .stack-tags {
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .stack-tags {
     display: flex;
     column-gap: 1rem;
 }
 
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .stack-tags .tags {
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .stack-tags .tags {
     padding: 0.5rem 0.8rem;
     background-color: var(--off-white);
     border-radius: 10px;
@@ -391,7 +393,7 @@ body {
     font-size: 0.7rem;
 }
 
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .divider {
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .divider {
     width: 100%;
     height: 2px;
     background-color: var(--text-gray);
@@ -399,22 +401,22 @@ body {
     border-radius: 2px;
 }
 
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .stats-wrapper{
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .stats-wrapper{
     display: flex;
     column-gap: 1rem;
     align-items: center;
 }
 
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .stats-wrapper .bi {
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .stats-wrapper .bi {
     color: var(--text-green);
     font-size: 1rem;
 }
 
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .stats-wrapper .ref-score .score-obtained , .shortlisted-wapper .sort-com {
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .stats-wrapper .ref-score .score-obtained , .shortlisted-wapper .sort-com {
     font-weight: 700;
     font-size: 1rem;
 }
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .stats-wrapper .ref-score {
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .stats-wrapper .ref-score {
     padding: 0.6rem 0;
     font-size: 0.9rem;
     display: flex;
@@ -423,26 +425,26 @@ body {
     column-gap: 0.3rem;
 }
 
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .stats-wrapper .ref-score .total-score, .shortlisted-wapper {
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .stats-wrapper .ref-score .total-score, .shortlisted-wapper {
     display: flex;
     justify-content: center;
     align-items: center;
     column-gap: 0.3rem;
 }
 
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .stats-wrapper .ref-score .total-score, .shortlisted-wapper .sort-text {
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .stats-wrapper .ref-score .total-score, .shortlisted-wapper .sort-text {
     font-size: 0.7rem;
     color: var(--para-color);
     
 }
 
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .sortlist-btn {
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .sortlist-btn {
     flex: 2;
     display: flex;
     justify-content: end;
 }
 
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candiate .sortlist-btn button {
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .sortlist-btn button {
     padding: 0.8rem 2rem;
     border: none;
     background-color: var(--light-red);
@@ -451,6 +453,13 @@ body {
     border-radius: 12px;
     letter-spacing: 0.3px;
     cursor: pointer;
+}
+
+.hide {
+    opacity: 0;
+    transition: 0.5s ease-in-out;
+    display: none !important;
+    
 }
 
 .container .body-wrapper .body-content .right-panel {
