--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@
 
 html {
     scroll-behavior: smooth;
-  }
+}
 
 body {
     background-color: var(--off-white);
@@ -60,7 +60,7 @@ body {
     align-items: center;
 }
 
-.container .header .logo-wrapper .logo-area{
+.container .header .logo-wrapper .logo-area {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -110,7 +110,7 @@ body {
     background-color: var(--option-background-hover);
     color: var(--icon);
     transition: 0.2s ease-in;
-    
+
 }
 
 .container .header .options-wrapper .option i {
@@ -200,39 +200,46 @@ body {
     display: flex;
 }
 
-/* Scroll bar hide ------------------------------------------------------------------*/ 
-.container .body-wrapper .body-content .left-panel::-webkit-scrollbar, .right-panel::-webkit-scrollbar, .middle-panel::-webkit-scrollbar {
+/* Scroll bar hide ------------------------------------------------------------------*/
+.container .body-wrapper .body-content .left-panel::-webkit-scrollbar,
+.right-panel::-webkit-scrollbar,
+.middle-panel::-webkit-scrollbar {
     display: none;
 }
 
-.left-panel, .right-panel, .middle-panel {
+.left-panel,
+.right-panel,
+.middle-panel {
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
+
 /* --------------------------------------------------------------------------------- */
 
 /* Styling scrollbar -----------------------------------*/
 /* width */
 .sorted-cand::-webkit-scrollbar {
     width: 0.3rem;
-  }
-  
-  /* Track */
-  .sorted-cand::-webkit-scrollbar-track {
-    background: #f1f1f1; 
-  }
-   
-  /* Handle */
-  .sorted-cand::-webkit-scrollbar-thumb {
+}
+
+/* Track */
+.sorted-cand::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+.sorted-cand::-webkit-scrollbar-thumb {
     background: var(--text-green);
     border-radius: 5px;
-  }
-  
-  /* Handle on hover */
-  .sorted-cand::-webkit-scrollbar-thumb:hover {
-    background: var(--green); 
-  }
+}
+
+/* Handle on hover */
+.sorted-cand::-webkit-scrollbar-thumb:hover {
+    background: var(--green);
+}
+
 /* ---------------------------------------------------- */
+
 .container .body-wrapper .body-content .left-panel {
     position: fixed;
     width: 20%;
@@ -255,7 +262,7 @@ body {
     flex: 2;
 }
 
-.side-wrapper .com-profile-wrapper .com-profile-img .img-wrapper{
+.side-wrapper .com-profile-wrapper .com-profile-img .img-wrapper {
     height: 2.5rem;
     width: 2.5rem;
     border-radius: 50%;
@@ -288,6 +295,39 @@ body {
     background-color: var(--off-white);
     color: var(--text-green);
     cursor: pointer;
+}
+
+.side-wrapper .title-clear .profile-btn-wrapper button {
+    height: 2rem;
+    width: 2rem;
+    border: none;
+    border-radius: 50%;
+    background-color: var(--off-white);
+    color: var(--text-green);
+    cursor: pointer;
+}
+
+.side-wrapper .title-clear .profile-btn-wrapper button:hover {
+    background-color: var(--hover-button);
+}
+
+.side-wrapper .list-wrapper {
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.5rem;
+    font-size: 0.7rem;
+    font-weight: 600;
+    list-style: none;
+}
+
+.side-wrapper .list-wrapper .list::before {
+    content: "\2022";
+    color: var(--text-green);
+    font-weight: bold;
+    font-size: 1rem;
+    display: inline-block;
+    width: 1em;
+    margin-left: -1em;
 }
 
 .side-wrapper .com-profile-wrapper .profile-btn-wrapper button:hover {
@@ -339,7 +379,7 @@ body {
     cursor: pointer;
 }
 
-.resume-and-remove .remove-shorlist{
+.resume-and-remove .remove-shorlist {
     border: none;
     background-color: var(--off-white);
     height: 2rem;
@@ -349,7 +389,8 @@ body {
     cursor: pointer;
 }
 
-.resume-and-remove .resume-download:hover, .resume-and-remove .remove-shorlist:hover {
+.resume-and-remove .resume-download:hover,
+.resume-and-remove .remove-shorlist:hover {
     background-color: var(--hover-button);
 }
 
@@ -374,7 +415,7 @@ body {
     display: flex;
     flex-direction: column;
     row-gap: 1rem;
-    
+
 }
 
 .container .body-wrapper .body-content .middle-panel .search-container {
@@ -465,7 +506,7 @@ body {
     row-gap: 1rem;
 }
 
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate{
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate {
     background-color: var(--white);
     border-radius: 12px;
     padding: 2rem 2rem;
@@ -479,7 +520,7 @@ body {
     display: flex;
     align-items: center;
     column-gap: 1rem;
-    
+
 }
 
 .container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .profile-title-wrapper .cand-profile-img {
@@ -495,9 +536,10 @@ body {
     object-fit: cover;
 }
 
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .profile-title-wrapper .cand-name-wrapper{
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .profile-title-wrapper .cand-name-wrapper {
     width: fit-content;
 }
+
 .container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .profile-title-wrapper .cand-name-wrapper .cand-name {
     font-size: 0.9rem;
     font-weight: 600;
@@ -559,7 +601,7 @@ body {
     border-radius: 2px;
 }
 
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .stats-wrapper{
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .stats-wrapper {
     display: flex;
     column-gap: 1rem;
     align-items: center;
@@ -570,10 +612,12 @@ body {
     font-size: 1rem;
 }
 
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .stats-wrapper .ref-score .score-obtained , .shortlisted-wapper .sort-com {
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .stats-wrapper .ref-score .score-obtained,
+.shortlisted-wapper .sort-com {
     font-weight: 700;
     font-size: 1rem;
 }
+
 .container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .stats-wrapper .ref-score {
     padding: 0.6rem 0;
     font-size: 0.9rem;
@@ -583,17 +627,19 @@ body {
     column-gap: 0.3rem;
 }
 
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .stats-wrapper .ref-score .total-score, .shortlisted-wapper {
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .stats-wrapper .ref-score .total-score,
+.shortlisted-wapper {
     display: flex;
     justify-content: center;
     align-items: center;
     column-gap: 0.3rem;
 }
 
-.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .stats-wrapper .ref-score .total-score, .shortlisted-wapper .sort-text {
+.container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .stats-wrapper .ref-score .total-score,
+.shortlisted-wapper .sort-text {
     font-size: 0.7rem;
     color: var(--para-color);
-    
+
 }
 
 .container .body-wrapper .body-content .middle-panel .candidate-wrapper .candidate .sortlist-btn {
@@ -621,7 +667,7 @@ body {
     opacity: 0;
     transition: 0.5s ease-in-out;
     display: none !important;
-    
+
 }
 
 /* Right Panel */
@@ -637,7 +683,7 @@ body {
     row-gap: 1rem;
 }
 
-.side-wrapper{
+.side-wrapper {
     width: 100%;
     padding: 2rem 2rem;
     row-gap: 1.5rem;
@@ -678,7 +724,7 @@ body {
 
 }
 
-.side-wrapper .options-wrapper{
+.side-wrapper .options-wrapper {
     display: flex;
     flex-direction: column;
     row-gap: 0.5rem;
